<resources>
    <string name="app_name">Smart Profile</string>
    <string name="main"> Main Activity</string>
    <string name="geo_api_key">AIzaSyDcMldHV_LZBdycTVpAaqW2GrYr9y4LqAg</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_find">find</string>
    <string name="et_location">enter location</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_google_maps">GoogleMaps</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>
    <string name="title_activity_places_api">PlacesApiActivity</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_place_type_option_dialog">PlaceTypeOptionDialog</string>
    <string name="rb_area">Area</string>
    <string name="rb_place">Places</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_location_details_getter">LocationDetailsGetter</string>
    <string name="area_name">location name</string>
    <string name="silent">Silent</string>
    <string name="normal">Normal</string>
    <string name="vibrate">Vibrate</string>
    <string name="profile_type_header">Choose a profile</string>
    <string name="example">example</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="location_header">you are @</string>
    <string name="add_location">Add Location</string>
    <string name="title_activity_profiles">Profiles</string>
    <string name="title_activity_geofence_home_page">GeofenceHomePage</string>
    <string name="title_activity_geofence">GeofenceActivity</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <string name="geofence_max_limit_reached">
        You have reached maximum locations limit, new locations cannot be added. Delete some locations to add new locations.
    </string>
    <string name="insert_error">
        Error while adding new location. Please try again.
    </string>


    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="remove_location">Remove location</string>
    <string name="text_here">text here</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="searching_cation">Searching location ...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dnd_header">Night mode</string>
    <string name="dnd_description">When Night mode is enabled calls and notifications will be silenced</string>
    <string name="location_name">location name</string>
    <string name="schedule_header">Schedule</string>
    <string name="from">From :</string>
    <string name="time">time</string>
    <string name="to">To :</string>
    <string name="save">SAVE</string>
    <string name="hour">hour</string>
    <string name="minute">minutes</string>
    <string name="title_activity_time_set">TimeSetActivity</string>
    <string name="view_locations">View Locations</string>
    <string name="tp_header">Night mode :</string>
    <string name="allow_call_header">Allow calls from</string>

    <string name="allow_call_favorite">Incoming calls from your favorites will not be silenced</string>
    <string name="allow_call_all">Incoming calls from your favorites will not be silenced</string>
    <string name="allow_call_none">Incoming calls from your favorites will not be silenced</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_about">About</string>
    <string name="version_number">1.1</string>
    <string name="version_number_title">Version number : </string>
    <string name="location_message">Your saved locations will be displayed here.</string>


</resources>
