<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/radio_btn_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">


        <RadioGroup
            android:id="@+id/rg_progress_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center">

            <RadioButton
                android:id="@+id/rb_area"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="16dp"
                android:text="@string/rb_area"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_place"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="16dp"
                android:text="@string/rb_place"
                android:textColor="@color/blue"
                android:textSize="16sp" />

        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/place_type_option_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:text="@string/ok"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/place_type_option_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/place_type_option_dialog_ok"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>