<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/action_bar_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <ImageButton
            android:id="@+id/navigator_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_navigation" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/navigator_button"
            android:layout_toRightOf="@+id/navigator_button"
            android:paddingLeft="20dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar_holder"
        android:weightSum="100"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_options_holder"
            android:layout_weight="60">

            <TextView
                android:id="@+id/location_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/location_header"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/home_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@+id/location_header"
                android:lineSpacingExtra="8dp"
                android:text="@string/et_location"
                android:textColor="@color/background2"
                android:textSize="20sp" />

            <Button
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:id="@+id/home_add_location"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/home_current_location"
                android:layout_centerHorizontal="true"
                android:background="@android:color/holo_blue_dark"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/add_location"/>

        </RelativeLayout>



    </LinearLayout>


</RelativeLayout>