<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arshiya.mapsapi.about.About"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/app_icon"
            android:id="@+id/about_image"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_app_name"
            android:layout_below="@+id/about_image"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_app_name"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_version_number_title"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/blackO60"
                android:text="@string/version_number_title"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_version_number"
                android:layout_toRightOf="@+id/about_version_number_title"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/blackO60"
                android:text="@string/version_number"
                />
        </RelativeLayout>



    </RelativeLayout>

</RelativeLayout>
