<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.arshiya.mapsapi.settings.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/night_mode_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/night_mode_image"
                android:src="@drawable/night_mode" />

            <RelativeLayout
                android:id="@+id/dnd_descrioption_holder"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">

                <TextView
                    android:id="@+id/dnd_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dnd_header"
                    android:lineSpacingExtra="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dnd_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dnd_header"
                    android:text="@string/dnd_description"
                    android:textColor="@color/blackO60"
                    android:textSize="14sp" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/night_mode_cb"
                android:layout_width="48dp"
                android:layout_height="56dp"
                android:background="@null"
                android:button="@drawable/checked_box"
                android:gravity="center_vertical"
                android:layout_margin="16dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blackO10">

        </View>

        <LinearLayout
            android:id="@+id/settings_schedule_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/schedule" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">


                <TextView
                    android:id="@+id/schedule_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/schedule_header"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/from_time_holder"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginBottom="7dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/from_time_header"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/from"
                        android:textColor="@color/blackO60"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/from_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/time"
                        android:textColor="@color/blackO60"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/to_time_holder"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/to_time_header"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/to"
                        android:textColor="@color/blackO60"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/to_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/blackO60"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blackO10">

        </View>

        </LinearLayout>

</ScrollView>
